--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,4 +4,4 @@ sphinx>=1.7.0
 astroquery>=0.3.9
 sphinxcontrib-apidoc
 sphinx-gallery
-git+https://github.com/sphinx-contrib/video.git
+git+git://github.com/sphinx-contrib/video#egg=sphinxcontrib-video
